// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders single word with caret 1`] = `
<DocumentFragment>
  .emotion-5 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-2 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

<span
    class="emotion-5"
    data-testid="word"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      d
    </span>
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      o
    </span>
    <span
      class="pending emotion-2"
      data-testid="pending"
    >
      g
    </span>
    <span
      class="pending emotion-2"
      data-testid="pending"
    >
      e
    </span>
    <span
      class="emotion-4"
      data-testid="caret"
    />
  </span>
</DocumentFragment>
`;

exports[`renders template character on wrong typing 1`] = `
<DocumentFragment>
  .emotion-6 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-4 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

.emotion-5 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-1 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

<span
    class="emotion-6"
    data-testid="word"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      o
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      r
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      l
    </span>
    <span
      class="pending emotion-4"
      data-testid="pending"
    >
      d
    </span>
    <span
      class="emotion-5"
      data-testid="caret"
    />
  </span>
</DocumentFragment>
`;

exports[`renders template character on wrong typing 2`] = `
<DocumentFragment>
  .emotion-8 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-7 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-1 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

<span
    class="emotion-8"
    data-testid="word"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      o
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      r
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      l
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      d
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      x
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      x
    </span>
    <span
      class="emotion-7"
      data-testid="caret"
    />
  </span>
</DocumentFragment>
`;
